# frozone

./: .pre-commit-config.yaml  README.md  default.nix
.github/workflows/: docker.yml  pre-commit.yaml
frozone/: Dockerfile  bot.py  pyproject.toml  requirements.txt
honey/: Dockerfile  honey.py
lucius/: Dockerfile  lucius.py
